policies/allow-egress-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-busybox
  namespace: airwave-dev
spec:
  podSelector:
    matchLabels: 
      app: busybox
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: default
      podSelector:
        matchLabels:
          app: nginx
