policies/deny-all-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: airwave-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
