policies/deny-default-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-default-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
